--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@sync.so/sdk": "^0.1.9",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "form-data": "^4.0.3",
     "framer-motion": "^12.18.1",
     "googleapis": "^130.0.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,5 +43,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3"
+  },
+  "optionalDependencies": {
+    "@gradio/client": "^1.15.2"
   }
 }
