--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.2.0",
+    "@elevenlabs/react": "^0.1.7",
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
